sandbox/output
OneHundredDoors.java:29: error: variable result is already defined in method doorStatesAfterPassingDoors(int)
            List<DS> result = doorStates.subList(1, 3);
                     ^
OneHundredDoors.java:34: error: variable result is already defined in method doorStatesAfterPassingDoors(int)
            List<DS> result = doorStates.subList(1, 4);
                     ^
2 errors
